templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: "{name}"
  labels:
      name: "{name}"
      quota: "{app}"
