templates/networkpolicies.yaml
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-from-ci
    namespace: "{namespace}"
  spec:
    ingress:
    - from:
      namespaceSelector:
        matchLabels:
          name: "ci-{name}"
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-from-default
    namespace: "{namespace}"
  spec:
    ingress:
    - from:
      namespaceSelector:
        matchLabels:
          name: default
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: default-deny-ingress
    namespace: "{namespace}"
  spec:
    policyTypes:
    - Ingress
